k8s/pdf-platform-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f base.yml
    kompose.version: 1.24.0 (HEAD)
  labels:
    io.kompose.service: pdf-platform
  name: pdf-platform
spec:
  ports:
    - name: "9000"
      port: 9000
      nodePort: 10000
  selector:
    io.kompose.service: pdf-platform
  type: NodePort
