k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f base.yml
    kompose.version: 1.24.0 (HEAD)
  labels:
    io.kompose.service: sqlserver
  name: sqlserver
spec:
  ports:
    - name: "1433"
      port: 1433
      nodePort: 11433
  selector:
    io.kompose.service: sqlserver
  type: NodePort
