k8s/pdf-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pdf-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/pdf-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pdf-net: "true"
